[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "orb-py"
version = "1.8.0"
description = "Open Resource Broker (ORB) — dynamic cloud resource provisioning via CLI and REST API"
readme = "README.md"
license = "Apache-2.0"
authors = [
    {name = "Open Resource Broker Maintainers", email = "open-resource-broker-maintainers@lists.finos.org"},
]
maintainers = [
    {name = "Open Resource Broker Maintainers", email = "open-resource-broker-maintainers@lists.finos.org"},
]
keywords = [
    "aws",
    "ec2",
    "hostfactory",
    "symphony",
    "hpc",
    "cluster",
    "cloud",
    "infrastructure",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Clustering",
    "Topic :: System :: Distributed Computing",
]
requires-python = ">=3.10"

dependencies = [
    # Core dependencies (always needed, never provider-specific)
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "sqlalchemy>=2.0.0",
    "urllib3>=2.6.3", # Security: Fix CVE-2025-66471, CVE-2025-66418, CVE-2026-21441
    "PyJWT>=2.8.0",
    "cryptography>=46.0.5", # Security: Fix CVE-2026-26007
    "filelock>=3.20.1", # Security: Fix CVE-2025-68146 race condition
    "requests>=2.31.0",
    "PyYAML>=6.0.0", # Exported API (lazy-loaded)
    "jsonschema>=4.17.0",
    # AWS provider deps — currently in core for backward compatibility.
    # The canonical install path going forward is `pip install orb-py[aws]`,
    # which already works today.  When the second provider lands these will
    # move to the [aws] extra and a major-version bump will signal the
    # breaking change for operators who installed without extras.
    "boto3>=1.42.21",
    "botocore>=1.42.21",
    "psutil>=5.9.0", # Required by the system health check (CPU/memory)
]

[project.optional-dependencies]
# ── Storage extras ─────────────────────────────────────────────────────────
# SQL storage strategy — includes Alembic for schema migration support.
# Install with: pip install orb-py[sql]
sql = [
    "alembic>=1.13",
]

# ── Provider extras ────────────────────────────────────────────────────────
# AWS provider — explicit opt-in alias for the AWS deps currently in core.
# Pinning the same versions keeps `pip install orb-py[aws]` resolving identically
# to the bare install and future-proofs operator install commands for the day
# AWS deps move out of core.
aws = [
    "boto3>=1.42.21",
    "botocore>=1.42.21",
]

# Modern Kubernetes provider — explicit opt-in extra.  Install with:
#   pip install orb-py[k8s]
# Only the SDK client is required here; everything else (jinja2, watchdog,
# alembic etc.) is legacy-plugin baggage and stays in the [k8s-legacy] extra.
k8s = [
    "kubernetes",
]

# Azure provider runtime dependencies. Install with:
#   pip install orb-py[azure]
azure = [
    "azure-core>=1.38.2",
    "azure-identity>=1.25.2",
    "azure-mgmt-compute>=37.2.0",
    "azure-mgmt-network>=30.2.0",
    "azure-mgmt-resource>=25.0.0",
    "azure-mgmt-resource-subscriptions>=1.0.0b1",
    "httpx>=0.27.0",
]
# gcp = [
#     "google-cloud-compute>=1.14.0",
#     "google-auth>=2.23.0",
# ]

# Meta-extra: all currently implemented providers
all-providers = [
    "orb-py[aws]",
    "orb-py[azure]",
    "orb-py[k8s]",
]

# Legacy k8s HostFactory plugin — heavy deps gated behind optional extra.
# Install with: pip install orb-py[k8s-legacy]
k8s-legacy = [
    "kubernetes",
    "boto3>=1.42.21",
    "jinja2>=3.1.0",
    "typing-extensions",
    "watchdog",
    "rich>=13.3.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "tenacity",
    "prometheus-client>=0.17.0",
    "sqlalchemy>=2.0.0",
    "pg8000",
    "alembic",
    "fastapi>=0.128.0",
    "uvicorn>=0.24.0",
]

# ── Feature extras ─────────────────────────────────────────────────────────
# Reflex web UI — the wheel ships a pre-built SPA bundle in ``orb/ui/_static/``
# so end users do NOT need Node/Bun at runtime (only builders running
# ``dev-tools/package/build_ui.sh`` do).  Pin to 0.9.x: earlier versions
# lack ``api_transformer`` and the React Router 7 build layout our
# rxconfig/api-transformer assumes.
# Install with: pip install orb-py[ui]
ui = [
    "reflex>=0.9,<0.10",
]

# CLI enhancements (colored output)
cli = [
    "rich>=13.3.0",
    "rich-argparse>=1.0.0",
]

# API server (for REST API mode)
api = [
    "fastapi>=0.128.0",
    "starlette>=0.49.1", # Security: Fix CVE-2025-62727, CVE-2025-54121, CVE-2024-47874
    "uvicorn>=0.24.0",
    "jinja2>=3.1.0",
]

# OTel API only — for embedders that want instrumentation without the SDK weight.
# Libraries should depend on [otel]; applications depend on [monitoring].
otel = [
    "opentelemetry-api>=1.20.0",
]

# Monitoring & observability (provider-neutral — no boto3 instrumentation here)
monitoring = [
    "orb-py[otel]",
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-prometheus>=0.64b0,<1.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0,<1.0",
    "opentelemetry-instrumentation-sqlalchemy>=0.41b0,<1.0",
    # Click span-per-command instrumentation (programmatic, not CLI-wrapper)
    "opentelemetry-instrumentation-click>=0.64b0,<1.0",
    # OS-level CPU/memory/GC/thread gauges (replaces dead memory_usage_bytes/cpu_usage_percent)
    "opentelemetry-instrumentation-system-metrics>=0.64b0,<1.0",
    # Log-record trace_id/span_id injection for log-trace correlation
    "opentelemetry-instrumentation-logging>=0.64b0,<1.0",
    "prometheus-client>=0.17.0",
    "psutil>=5.9.0",
]

# AWS-specific monitoring (botocore/boto3 instrumentation; requires [aws])
monitoring-aws = [
    "orb-py[aws,monitoring]",
    "opentelemetry-instrumentation-botocore>=0.64b0,<1.0",
]

# All optional features (providers + features)
all = [
    "orb-py[cli,api,sql,monitoring,all-providers]",
]

# ── Test extras ────────────────────────────────────────────────────────────
# AWS test dependencies — moto + response mocking
test-aws = [
    "orb-py[aws]",
    "moto[ec2,iam,ec2instanceconnect,autoscaling,ssm,dynamodb,sts,sqs,sns]>=5.1.19,<6.0.0",
    "responses>=0.24.0,<1.0.0",
    "requests-mock>=1.11.0,<2.0.0",
]

# Azure SDK packages imported directly by the Azure tests. These overlap with
# the runtime extra because the tests assert behavior using real SDK exception
# and model types, but the test group does not install unrelated runtime SDKs.
test-azure = [
    "azure-core>=1.38.2",
    "azure-identity>=1.25.2",
    "azure-mgmt-compute>=37.2.0",
]

# Kubernetes test dependencies — kmock is an in-process HTTP-level K8s API mock.
# Tests point the real kubernetes SDK client at the kmock URL so the full
# client stack is exercised without a live cluster.
test-k8s = [
    "orb-py[k8s]",
    "kmock>=0.7",
]

# ---------------------------------------------------------------------------
# pip compatibility shims for [dependency-groups] (PEP 735)
#
# pip does not yet support PEP 735 dependency-groups.  The authoritative dev
# dependency lists live in [dependency-groups] below.  These optional-deps
# mirror them so `pip install -e ".[dev]"` keeps working.  When pip gains
# PEP 735 support these shims can be removed.
# ---------------------------------------------------------------------------
ci = [
    # Code Quality Tools
    "ruff>=0.1.0",
    "pathspec>=0.11.0",
    "pyright>=1.1.408,<2.0.0",
    "bandit>=1.7.5,<2.0.0",
    "bandit-sarif-formatter>=1.1.1,<2.0.0",
    "import-linter>=2.0,<3.0.0",
    # Testing Framework
    "pytest>=7.4.3,<10.0.0",
    "pytest-cov>=4.1.0,<8.0.0",
    "pytest-env>=1.1.1,<2.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "pytest-asyncio>=0.21.1,<2.0.0",
    "pytest-timeout>=2.2.0,<3.0.0",
    "pytest-xdist>=3.3.1,<4.0.0",
    "pytest-html>=4.1.1,<5.0.0",
    "pytest-benchmark>=5.1.0,<6.0.0",
    "coverage>=7.3.2,<8.0.0",
    # Test dependencies for API and template tests
    "fastapi>=0.128.0",
    "httpx>=0.27.0",
    "jinja2>=3.1.0",
    # AWS Testing
    "moto[all]>=5.1.19,<6.0.0",
    "responses>=0.24.0,<1.0.0",
    "requests-mock>=1.11.0,<2.0.0",
    "joserfc>=1.6.1",
    "werkzeug>=3.1.6",
    "nltk>=3.9.3",
    # k8s-legacy extra deps — required for tests/integration/k8s_legacy/
    "kubernetes",
    "watchdog",
    "tenacity",
    "pg8000",
    "uvicorn>=0.24.0",
    "prometheus-client>=0.17.0",
    "alembic>=1.13",
    # Essential Type Stubs
    "types-PyYAML>=6.0.12.12,<7.0.0",
    "types-python-dateutil>=2.8.19.14,<3.0.0",
    "kubernetes-stubs-elephant-fork>=36.0.2,<37.0.0",
    # Build Tools
    "tomli>=2.0.0,<3.0.0",
    # Security Scanning
    "safety>=3.7.0,<4.0.0",
    "pip-audit>=2.6.1,<3.0.0",
    "semgrep>=1.45.0,<2.0.0",
    "cyclonedx-bom>=4.0.0,<8.0.0",
    "peewee>=3.18.3",
    "marshmallow>=4.1.2",
    # Documentation
    "mkdocs>=1.5.0,<2.0.0",
    "mkdocs-material>=9.1.0,<10.0.0",
    "mkdocstrings>=0.22.0,<2.0.0",
    "mkdocstrings-python>=1.1.0,<3.0.0",
    "mkdocs-gen-files>=0.5.0,<1.0.0",
    "mkdocs-literate-nav>=0.6.0,<1.0.0",
    "mkdocs-section-index>=0.3.0,<1.0.0",
    "mike>=1.1.0,<3.0.0",
    # Build and Packaging
    "build>=1.0.3,<2.0.0",
    "wheel>=0.41.3,<1.0.0",
]
dev = [
    "orb-py[ci,all-providers]",
    "virtualenv>=20.26.6",
    "pre-commit>=3.5.0,<5.0.0",
    "bump2version>=1.0.1,<2.0.0",
    "python-semantic-release>=10.0.0,<11.0.0",
    "line-profiler>=4.1.1,<6.0.0",
    "memory-profiler>=0.61.0,<1.0.0",
    "py-spy>=0.3.14,<1.0.0",
    "py-cpuinfo>=9.0.0,<10.0.0",
    "ipdb>=0.13.13,<1.0.0",
    "ipython>=8.16.1,<9.0.0",
    "radon>=6.0.1,<7.0.0",
    "pip-tools>=7.3.0,<8.0.0",
    "twine>=4.0.0",
    "git-changelog>=2.6.0,<3.0.0",
]

[dependency-groups]
# ---------------------------------------------------------------------------
# Authoritative dev dependency definitions (PEP 735).
# Use: `uv sync --group dev` or `uv sync --group ci`
# The [project.optional-dependencies] ci/dev sections above are pip shims
# that mirror these lists for `pip install -e ".[dev]"` compatibility.
# ---------------------------------------------------------------------------
# CI Dependencies: What CI needs to test, lint, and build docs
ci = [
    # Code Quality Tools (ruff replaces black/isort/flake8/pylint)
    "ruff>=0.1.0",
    "pathspec>=0.11.0",  # For gitignore pattern matching in dev-tools
    "pyright>=1.1.408,<2.0.0",
    "bandit>=1.7.5,<2.0.0",
    "bandit-sarif-formatter>=1.1.1,<2.0.0",
    "import-linter>=2.0,<3.0.0",  # Architecture layer-boundary enforcement

    # Testing Framework
    "pytest>=7.4.3,<10.0.0",
    "pytest-cov>=4.1.0,<8.0.0",
    "pytest-env>=1.1.1,<2.0.0",
    "pytest-mock>=3.12.0,<4.0.0",
    "pytest-asyncio>=0.21.1,<2.0.0",
    "pytest-timeout>=2.2.0,<3.0.0",
    "pytest-xdist>=3.3.1,<4.0.0",
    "pytest-html>=4.1.1,<5.0.0",
    "pytest-benchmark>=5.1.0,<6.0.0",
    "coverage>=7.3.2,<8.0.0",

    # Test dependencies for API and template tests
    "fastapi>=0.128.0",
    "httpx>=0.27.0",  # Required by FastAPI TestClient
    "jinja2>=3.1.0",

    # AWS Testing
    "moto[all]>=5.1.19,<6.0.0",
    "responses>=0.24.0,<1.0.0",
    "requests-mock>=1.11.0,<2.0.0",
    # Security overrides for vulnerable dependencies
    "joserfc>=1.6.1",
    "werkzeug>=3.1.6",
    # Security override for safety's vulnerable nltk dependency (GHSA-7p94-766c-hgjp)
    "nltk>=3.9.3",

    # k8s-legacy extra deps — required for tests/integration/k8s_legacy/
    # The [k8s-legacy] optional extra gates the shim on `kubernetes`; listing
    # them here ensures the integration test job installs them via --all-groups
    # without relying solely on --all-extras (which the cached env may skip).
    "kubernetes",
    "watchdog",
    "tenacity",
    "pg8000",
    "uvicorn>=0.24.0",
    "prometheus-client>=0.17.0",
    "alembic>=1.13",

    # OpenTelemetry stack — installed in CI so pyright resolves the guarded
    # optional imports in bootstrap/telemetry.py and the observability tests
    # exercise the real SDK path (the [monitoring] extra is not synced by
    # --all-groups, which only pulls dependency-groups, not extras).
    "opentelemetry-sdk>=1.20.0",
    "opentelemetry-exporter-prometheus>=0.64b0,<1.0",
    "opentelemetry-instrumentation-fastapi>=0.41b0,<1.0",
    "opentelemetry-instrumentation-sqlalchemy>=0.41b0,<1.0",
    "opentelemetry-instrumentation-botocore>=0.64b0,<1.0",
    "opentelemetry-instrumentation-click>=0.64b0,<1.0",
    "opentelemetry-instrumentation-system-metrics>=0.64b0,<1.0",
    "opentelemetry-instrumentation-logging>=0.64b0,<1.0",

    # k8s HTTP-level mock server (test-only, not shipped with the package)
    "kmock>=0.7",

    # Essential Type Stubs
    "types-PyYAML>=6.0.12.12,<7.0.0",
    "types-python-dateutil>=2.8.19.14,<3.0.0",
    "kubernetes-stubs-elephant-fork>=36.0.2,<37.0.0",

    # Build Tools
    "tomli>=2.0.0,<3.0.0",  # For pyproject.toml parsing in dev scripts (Python < 3.11)

    # Security Scanning
    "safety>=3.7.0,<4.0.0",
    "pip-audit>=2.6.1,<3.0.0",
    "semgrep>=1.45.0,<2.0.0",
    "cyclonedx-bom>=4.0.0,<8.0.0",
    # Security override for safety's vulnerable peewee dependency
    "peewee>=3.18.3",
    # Security override for safety's vulnerable marshmallow dependency (CVE-2025-68480)
    "marshmallow>=4.1.2",
    # Security override for lxml (CVE-2026-41066) — transitive via cyclonedx-bom + pip-audit
    "lxml>=6.1.0",

    # Documentation
    "mkdocs>=1.5.0,<2.0.0",
    "mkdocs-material>=9.1.0,<10.0.0",
    "mkdocstrings>=0.22.0,<2.0.0",
    "mkdocstrings-python>=1.1.0,<3.0.0",
    "mkdocs-gen-files>=0.5.0,<1.0.0",
    "mkdocs-literate-nav>=0.6.0,<1.0.0",
    "mkdocs-section-index>=0.3.0,<1.0.0",
    "mike>=1.1.0,<3.0.0",

    # Build and Packaging
    "build>=1.0.3,<2.0.0",
    "wheel>=0.41.3,<1.0.0",
]

# Dev Dependencies: Additional dev tools (includes all CI deps)
dev = [
    {include-group = "ci"},
    "virtualenv>=20.26.6",  # Security: Fix CVE-2024-53899 command injection
    "pre-commit>=3.5.0,<5.0.0",
    "bump2version>=1.0.1,<2.0.0",
    "python-semantic-release>=10.0.0,<11.0.0",
    "line-profiler>=4.1.1,<6.0.0",
    "memory-profiler>=0.61.0,<1.0.0",
    "py-spy>=0.3.14,<1.0.0",
    "py-cpuinfo>=9.0.0,<10.0.0",
    "ipdb>=0.13.13,<1.0.0",
    "ipython>=8.16.1,<9.0.0",
    "radon>=6.0.1,<7.0.0",
    "pip-tools>=7.3.0,<8.0.0",
    "twine>=4.0.0",
    "git-changelog>=2.6.0,<3.0.0",
]
[project.scripts]
orb = "orb.run:cli_main"

[project.urls]
Homepage = "https://github.com/finos/open-resource-broker"
Documentation = "https://finos.github.io/open-resource-broker/"
Repository = "https://github.com/finos/open-resource-broker"
"Bug Reports" = "https://github.com/finos/open-resource-broker/issues"

[tool.uv]
conflicts = [
    [
        { group = "ci" },
        { extra = "ui" },
    ],
    [
        { group = "dev" },
        { extra = "ui" },
    ],
]
# Overrides pin transitive deps across every resolution split (including
# the ``ui``-only one that isn't reachable through the ``ci`` group's own
# ``lxml>=6.1.0`` override).  GHSA-vfmq-68hx-4jfw affects lxml 5.x.
# cyclonedx-python-lib>=11 switches its jsonschema extra from [format]
# (which pulls GPL-3.0-only rfc3987) to [format-nongpl] (which uses the
# Apache-2.0 rfc3987-syntax instead).  Without this override the ui-only
# conflict split resolves cyclonedx-bom's transitive dep to 9.1.0.
override-dependencies = [
    "lxml>=6.1.1",
    "cyclonedx-python-lib>=11.0.0",
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = ["py.typed"]
"orb.config" = ["default_config.json"]
"orb.providers.aws.config" = ["*.json"]
"orb.ui" = ["rxconfig.py", "_static/**/*", "_static/*"]
"orb.k8s_legacy.alembic" = ["alembic.ini", "script.py.mako"]
"orb.k8s_legacy.alembic.versions" = ["*.py"]
"orb.k8s_legacy.tests.resources" = ["*.yml", "*.tpl"]

[tool.setuptools.data-files]
"orb_scripts" = ["src/orb/infrastructure/scheduler/hostfactory/scripts/*.sh", "src/orb/infrastructure/scheduler/hostfactory/scripts/*.bat"]  # keep in sync with .project.yml build.package_root



[tool.pytest.ini_options]
testpaths = ["tests", "src/orb/k8s_legacy/tests"]
norecursedirs = [
    "tests/providers/aws/live",
    # k8s live tests require a real cluster; the parallel ci-tests-providers
    # target passes -m "not serial" which would deselect every test if
    # live/conftest.py's pytest_collection_modifyitems hook is allowed to run
    # (it bulk-stamps serial on all collected items in the session).  Excluding
    # this subtree from auto-discovery mirrors the aws/live pattern and keeps
    # the parallel leg collecting only the mocked/unit/contract tests.  The
    # serial ci-tests-providers-serial target points pytest at the path
    # explicitly so live tests are still reachable when --run-k8s is passed.
    "tests/providers/k8s/live",
    # Legacy k8s regression tests require a live cluster + kubeconfig; their
    # conftest calls `delete_pods_in_namespace()` at collection time, which
    # crashes in headless CI without a real kube context.  Run them
    # explicitly with `pytest src/orb/k8s_legacy/tests/regression`.
    "src/orb/k8s_legacy/tests/regression",
]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
asyncio_mode = "strict"
asyncio_default_fixture_loop_scope = "function"
junit_family = "legacy"
# Coverage flags are NOT set here: CI drives coverage via makefiles/common.mk
# (PYTEST_COV_ARGS), passed explicitly by each ci-tests-* target.  Keeping --cov
# out of addopts means a bare `pytest` run is not instrumented (faster, no need
# for --no-cov everywhere) while CI coverage is unchanged.
addopts = "--tb=short --strict-markers --disable-warnings"
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
markers = [
    "unit: Unit tests",
    "integration: Integration tests",
    "e2e: marks end-to-end tests",
    "mcp: MCP server tests",
    "slow: Slow running tests (docker builds, stress loops, subprocess spawning)",
    "aws: Tests requiring AWS credentials",
    "manual_aws: Live AWS integration tests that must be run manually with --run-manual-aws",
    "rest_api: REST API integration tests",
    "application: Application layer tests",
    "architecture: Architecture compliance tests",
    "domain: Domain layer tests",
    "infrastructure: Infrastructure layer tests",
    "patterns: Design pattern tests",
    "providers: Provider implementation tests",
    "performance: Performance benchmark tests",
    "provider_contract: Part of the provider contract test suite",
    "simulator_limitation: Assertion weakened due to known simulator gap",
    "requires_real_provider: Skipped unless --run-real-provider flag passed",
    "moto: Tests using moto-mocked AWS (no real credentials required)",
    "live: Tests requiring real AWS credentials (enabled with --live or --run-aws)",
    "sdk: Tests exercising the ORBClient SDK interface",
    "cli: marks CLI integration tests",
    "benchmark: marks benchmark/performance tests",
    "api: marks API tests",
    "security: marks security tests",
    "serial: forces serial execution (use ``-n0`` or filter with ``-m 'not serial'`` under xdist)",
    "k8s_live: Live Kubernetes integration tests (require a real cluster — pass --run-k8s to enable)",
    "timeout: Per-test wall-clock timeout (requires pytest-timeout; value in seconds)",
]
# Provider-specific fake credentials live in
# tests/providers/<name>/mocked/conftest.py.  The global pytest-env block
# intentionally does not set cloud credentials so live suites (any
# provider, any auth mechanism) inherit the operator's real environment.
env = []

[tool.coverage.run]
source = ["src/orb"]
branch = true
omit = [
    # k8s_legacy is the legacy HostFactory plugin: it has its own test suite
    # under src/orb/k8s_legacy/tests (in pytest testpaths) that runs separately
    # from the main legs, so it always shows 0% here and unfairly drags the
    # combined number.  Exclude it from the main coverage report.
    "src/orb/k8s_legacy/*",
    # Test files that live under src/ are not production source.
    "*/tests/*",
    # Thin process entrypoints / daemon lifecycle: not meaningfully unit-tested
    # (exercised via subprocess/integration, not the coverage-uploading legs).
    "src/orb/__main__.py",
    "src/orb/run.py",
    "src/orb/interface/server_daemon.py",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
ignore_errors = true
exclude_lines = [
    "pragma: no cover",
    "pragma: nocover",
    "def __repr__",
    "def __str__",
    "if self.debug:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if 0:",
    "if __name__ == .__main__.:",
    "class .*\\bProtocol\\):",
    "@(abc\\.)?abstractmethod",
    "pass",
    "raise ImportError",
    "except ImportError:",
    "if TYPE_CHECKING:",
    "\\.\\.\\.$",
]

[tool.coverage.html]
directory = "htmlcov"
title = "Open Resource Broker Coverage Report"

[tool.coverage.xml]
output = "coverage.xml"

[tool.ruff]
target-version = "py310"
line-length = 100
exclude = [
    ".eggs",
    ".git",
    ".hg",
    ".tox",
    ".venv",
    "build",
    "dist",
    # Legacy k8s plugin is in maintenance mode; it predates the root ruff config
    # and uses mypy/tox for type-checking.  Exclude it from the enforced ruff
    # scan to avoid spurious CI failures on code that isn't being actively evolved.
    "src/orb/k8s_legacy",
]

[tool.ruff.lint]
# ENFORCED: These rules fail CI (replace black/isort/flake8)
select = ["E", "W", "F", "I"]
# OPTIONAL: These warn but don't fail CI (replace pylint functionality)
extend-select = ["N", "UP", "B", "PL", "C90", "RUF"]
ignore = [
    "E501",  # Line too long (handled by formatter)
    "PLR0913",  # Too many arguments
    "PLR0912",  # Too many branches
    "PLR0915",  # Too many statements
    "PLR2004",  # Magic value used in comparison - acceptable in tests
    "PLR0911",  # Too many return statements - acceptable for complex logic
    "PLW2901",  # Loop variable overwritten - acceptable pattern
    "PLW0603",  # Using global statement - acceptable for singletons
    # Non-critical violations that don't break functionality
    "C901",   # Function complexity - doesn't break functionality
    "E402",   # Module imports not at top - acceptable in scripts/tests
    "E712",   # Equality comparisons to True - style preference
    "E721",   # Type comparisons - style preference
    "B009",   # getattr with constant — used intentionally after hasattr guards for duck-typing
    "B007",   # Unused loop variables - cosmetic
    "B904",   # Missing exception chaining - important but large effort
    "B024",   # Abstract base class without abstract methods - design choice
    "B023",   # Function definition does not bind loop variable - acceptable pattern
    "B019",   # lru_cache on methods - acceptable for performance
    "B004",   # hasattr callable check - acceptable pattern
    "I001",   # Import block formatting - handled by formatter
    "N818",   # Exception naming conventions
    "N802",   # Function naming conventions
    "N804",   # First argument of class method should be cls — false positive with Pydantic @model_validator
    # Pyupgrade and modernization - non-critical style issues
    "UP006",  # Use built-in types for type annotations - style preference
    "UP024",  # Replace aliased errors - style preference
    "UP035",  # typing.Dict is deprecated - style preference
    "UP045",  # Use X | None for type annotations - style preference
    "RUF013", # PEP 484 prohibits implicit Optional - style preference
    "RUF059", # Unpacked variable is never used - acceptable in tests
    "RUF012", # Mutable class attributes should use ClassVar - design choice
    "RUF022", # __all__ is not sorted - style preference
    "RUF006", # Store reference to asyncio.create_task - acceptable pattern
    "RUF005", # Consider unpacking instead of concatenation - style preference
    "RUF003", # Comment contains ambiguous character - style issue
    "PLW1508", # Invalid type for environment variable default - acceptable
    "PLW0602", # Using global but no assignment - acceptable pattern
    "PLW1641", # Object does not implement __hash__ - design choice
    "PLC0415", # Import should be at top-level - used to avoid circular imports
    "PLC0414", # Import alias does not rename - acceptable pattern
]

[tool.ruff.lint.pep8-naming]
# Treat Pydantic decorators as classmethod-like so N805 ("first arg should be self")
# does not fire on @field_validator / @model_validator(mode="before"/"after") methods.
classmethod-decorators = [
    "classmethod",
    "pydantic.field_validator",
    "pydantic.model_validator",
    "validator",          # pydantic v1 compat
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = [
    "PLC0415",  # Allow conditional imports in tests for optional dependencies
    "N803",     # Allow PascalCase argument names (e.g. StateClass helper)
    "N806",     # Allow PascalCase local names for dynamically-constructed test subclasses
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.isort]
known-first-party = ["orb"]
combine-as-imports = true

[tool.pyright]
pythonVersion = "3.12"
pythonPlatform = "Linux"
include = ["src/orb"]
exclude = [
    ".venv", "build", "dist",
    # Legacy k8s plugin code predates pyright adoption and uses mypy.
    # The package is in maintenance mode pending the modern k8s provider;
    # type-checking is gated separately via ruff + the legacy tox config.
    "src/orb/k8s_legacy",
    # Reflex uses a symbolic reactive Var[T] system where component props
    # can accept either raw Python values OR Vars that resolve at render
    # time.  Reflex's own type stubs are conservative and pyright flags
    # every legal Var/value union as a mismatch (e.g. `color_scheme=` on
    # rx.badge, `.contains()` on Var[str]).  Type-safety of the UI is
    # gated by the Reflex compile step + runtime pytest suite; running
    # pyright over generated Reflex APIs produces ~50 false positives
    # per component that do not indicate real bugs.  Exclude the UI
    # tree; Reflex-agnostic Python (state.py, api.py) is small and
    # covered by tests.
    "src/orb/ui",
]
extraPaths = ["src"]
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
reportUnusedVariable = true
reportUnusedImport = true
reportPrivateUsage = false
venvPath = "."
venv = ".venv"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
version_variables = [".project.yml:version"]
build_command = "make semantic-release-build"
major_on_zero = true
allow_zero_version = true
tag_format = "v{version}"
commit_parser = "conventional"

[tool.semantic_release.branches.main]
match = "(main|master)"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.branches.release]
match = "release/.*"
prerelease_token = "rc"
prerelease = false

[tool.semantic_release.branches.feature]
match = "fix/.*|feature/.*"
prerelease_token = "alpha"
prerelease = true

[tool.semantic_release.changelog]
exclude_commit_patterns = [
    '''chore(?:\([^)]*?\))?:.+''',
    '''ci(?:\([^)]*?\))?:.+''',
    '''refactor(?:\([^)]*?\))?:.+''',
    '''style(?:\([^)]*?\))?:.+''',
    '''test(?:\([^)]*?\))?:.+''',
    '''build\((?!deps\):.+)''',
    '''Initial [Cc]ommit.*''',
]

[tool.semantic_release.changelog.default_templates]
changelog_file = "CHANGELOG.md"
output_format = "md"

[tool.semantic_release.commit_parser_options]
minor_tags = ["feat"]
patch_tags = ["fix", "perf"]
major_tags = ["release"]
default_bump_level = 2

[tool.semantic_release.remote]
name = "origin"
type = "github"

[tool.semantic_release.publish]
dist_glob_patterns = ["dist/*"]
upload_to_vcs_release = true
